# AzureSphereRemoteX.Server

./: .gitmodules  CMakeLists.txt  README.md  app_manifest.avnet.rev1.json  app_manifest.avnet.rev2.json  app_manifest.json  app_manifest.mdb.json  app_manifest.rdb.json  azsphere_board.txt  contract.h  echo_tcp_server.c  echo_tcp_server.h  exitcode_privnetserv.h  launch.vs.json  main.c  main.h  peripherals.c  peripherals.h
ImagePackages/: AzureSphereRemoteX_Server_Avnet_Rev_1.imagepackage  AzureSphereRemoteX_Server_Avnet_Rev_1_default.imagepackage  AzureSphereRemoteX_Server_Avnet_Rev_2.imagepackage  AzureSphereRemoteX_Server_Seeed_Mini.imagepackage  AzureSphereRemoteX_Server_Seeed_RDB.imagepackage
Manifests.defaults/: app_manifest.avnet.rev1.default.json  app_manifest.avnet.rev1.with_pwm.json  app_manifest.avnet.rev2.json  app_manifest.mdb.json  app_manifest.rdb.json
